Add mqtt-subscribe, history.push, displaying mqtt message

--- a/src/OpenHole.css
+++ b/src/OpenHole.css
@@ -1,14 +1,9 @@
 .OpenHole {
     text-align: center;
-  }
+}
   
-  .OpenHole-article{
-    position: relative;
-    top: 20%;
-  }
-  
-  .Openhole-article .msg{
-    margin:10px;
-    font-size:30px;
-  }
-  
+.OpenHole-article{
+  position: relative;
+  top: 30px;
+}
+
