Add guide image

--- a/src/Guide.css
+++ b/src/Guide.css
@@ -5,3 +5,12 @@
     position: relative;
     top: 20%;
 }
+
+.img{
+    width:200px;
+    height:200px;
+    margin:10px;
+}
+.btn{
+    top:40px;
+}
